# GameFrame

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: build.yml
GameFrame/: Utilize.hpp  Window.hpp
GameFrame/Assets/: Asset.cpp  Asset.hpp  FileAsset.cpp  FileAsset.hpp  ShaderProgramAsset.cpp  ShaderProgramAsset.hpp  Texture2DAsset.cpp  Texture2DAsset.hpp
GameFrame/Audio/: AudioDevice.hpp  ContextBasedWrapper.cpp  ContextBasedWrapper.hpp  Error.cpp  Error.hpp  ILoader.hpp  Listener.cpp  Listener.hpp  LoaderFFmpeg.hpp  LoaderWAV.hpp  Music.cpp  Music.hpp  OpenALWrapper.hpp  Sound.cpp  Sound.hpp  SoundBuffer.cpp  SoundBuffer.hpp  SoundSource.cpp  SoundSource.hpp  SoundStream.hpp  Utilize.cpp  Utilize.hpp
GameFrame/Graphics/: Buffer.cpp  Buffer.hpp  Color.cpp  Color.hpp  Framebuffer.cpp  Framebuffer.hpp  IOpenGLContext.cpp  IOpenGLContext.hpp  ImageLoader.cpp  ImageLoader.hpp  OpenGLWrapper.hpp  Program.cpp  Program.hpp  Shader.hpp  Shader.inl  Texture.cpp  Texture.hpp  Texture.inl  VertexArray.cpp  VertexArray.hpp
GameFrame/Object/: Node.hpp
GameFrame/Program/: Application.cpp  Application.hpp  FSMStack.cpp  FSMStack.hpp  FSMState.cpp  FSMState.hpp  FSMVector.hpp  Properties.cpp  Properties.hpp  test.cpp
GameFrame/Utilize/: CallAssert.hpp  CallAssert.inl  FileWatch.cpp  FileWatch.hpp  GLMTypedef.hpp  IDGenerator.hpp  ResourceHolder.hpp  ResourceHolder.inl  StopWatch.cpp  StopWatch.hpp  Time.cpp  Time.hpp  Variant.hpp  VariantHelper.hpp
GameFrame/Window/: Event.cpp  Event.hpp  EventManager.cpp  EventManager.hpp  IWindow.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp  (+3 more)
Graphics/: Color.cpp  Color.hpp  glad.c
Object/: Node.hpp
Program/: Application.hpp  Properties.hpp  test.cpp
Utilize/: GLMTypedef.hpp  ResourceHolder.hpp  ResourceHolder.inl  StopWatch.hpp  Time.cpp  Time.hpp
Window/: Event.hpp  IWindow.hpp  KeyEnum.cpp  KeyEnum.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp  SFMLWindow.cpp  SFMLWindow.hpp  WindowType.hpp
cmake/: FindFFMPEG.cmake
(+17 files in other folders)
